# spacetug_mujoco

./: ALGORITHM.md  README.md  parity_cpp.csv
assets/: tugnew5_centered.stl
cpp/: CMakeLists.txt
cpp/src/: main.cpp
model/: spacetug.xml
python/: requirements.txt  spacetug_sim.py
tools/: compare_parity.py
